# Cyberday_MCP

./: .env.example  .gitignore  .npmignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: publish.yml
docs/: discovery.md
python/src/cyberday_mcp/: config.py
python/tests/: test_client.py  test_server.py
scripts/: discover.mjs  probe.py
src/: client.ts  config.ts  index.ts  models.ts
src/cyberday_mcp/: __init__.py  client.py  models.py  server.py
tests/: conftest.py
