[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cyberday-mcp"
version = "0.1.0"
description = "Community MCP server for the Cyberday ISMS (cyberday.ai)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Cyberday MCP contributors" }]
keywords = ["mcp", "cyberday", "isms", "security", "compliance"]

dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
cyberday-mcp = "cyberday_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cyberday_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
